--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
-  "devDependencies": {
-    "@react-native-community/cli": "latest"
-  },
   "dependencies": {
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.3",
     "axios": "^1.13.2",
     "expo": "~54.0.23",
+    "expo-font": "~14.0.9",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
@@ -23,5 +21,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@react-native-community/cli": "^20.0.2"
+  }
 }
